--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
    
     <title>The Wealth & Health of the N-Nations</title>
     <link rel="stylesheet" type="text/css" href="main.css" />
